# kindle-pdf-annotator

./: .gitignore  AUTHORS  CHANGELOG.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  PYPI_RELEASE.md  QWEN.md  README.md  TEST_SUMMARY.md  TODO.md  VALIDATION_SUMMARY.md  cli.py  main.py  pyproject.toml  release.sh  requirements.txt  setup.py  test_all_pdfs.py  test_package.sh  test_parser.py  test_parser_complete.py
.zencoder/rules/: repo.md
docs/: COORDINATE_SYSTEM.md  PYPI_ANNOUNCEMENT.md  PYPI_PREPARATION_SUMMARY.md  PYPI_RELEASE.md  PYPI_SUBMISSION_CHECKLIST.md  TODO.md  blog.md  bluesky_announcement.md  facebook_announcement.md
examples/sample_data/: 659ec7697e419-clippings.txt  Downey_2024_Theatre_Hunger_Scaling_Up_Paper-clippings.txt  README.md  page_136_shea-clippings.txt  (+3 more)
scripts/: README.md  analyze_content_area.py  analyze_layout.py  analyze_pdf_positions.py  analyze_pdt_files.py  calibrate_kindle_pdf_coordinates.py  calibration_samples.json  check_annotation_fields.py  check_pdf_annotations.py  compute_linear_transform.py  debug_annotations.py  debug_column_detection.py  debug_content.py  debug_coordinate_conversion.py  debug_krds.py  debug_multiple_highlights.py  debug_page_numbers.py  debug_peirce_pdf.py  debug_title_width.py  diagnose_imports.py  diff_analysis.py  dump_pdf_tokens.py  find_content_in_pdf.py  find_page10_issue.py  frequency_transformations.py  get_title_coords.py  inspect_annotation_quads.py  inspect_norm.py  process_learning_directory.py  run_learning_mode.sh  test_direct_annotation.py  trace_annotation_pipeline.py  verify_snake_pattern.py
src/: __init__.py
tests/: TEST_SUMMARY.md  page_9_test_annotations.json  page_9_test_clippings.txt  peirce-charles-fixation-belief_trace.json  run_all_tests.py  test_all_example_pdfs.py  test_all_three_pdfs.py  test_cropbox_coordinate_conversion.py  test_deduplication.py  test_highlight_positions.py  test_highlight_width_coverage.py  test_highlighted_text_validation.py  test_integration_end_to_end.py  test_krds_offset_verification.py  test_krds_page_numbers.py  test_krds_parser.py  test_multi_line_highlight.py  test_note_highlight_unification.py  test_notes_with_clippings.py  test_page_9_highlights.py  test_page_offset_detection.py  test_parsers.py  test_peirce_text_coverage.py  test_short_text_filtering.py  test_snake_highlight.py  test_snake_highlight_pattern.py  test_soft_hyphen_matching.py  test_text_matching_strategies.py  test_two_column_pdf.py  test_unified_note_rendering.py
(+36 files in other folders)
